2010-01-13  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Environment.h: Environment::Binding gains a templated
	conversion operator, to facilitate distance 2 implicit conversion
	making this possible: 
	Environment env("package:stats") ;
	Function f = env["rnorm"] ;

	* src/Rcpp/NumericVector.h: operator[], begiun and end are
	promoted to inline member functions
	* src/Rcpp/IntegerVector.h: idem
	* src/Rcpp/RawVector.h: idem
	* src/Rcpp/LogicalVector.h: idem

2010-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.2

	* debian/*: Similarly updated for new release to Debian

	* .Rbuildignore: Add 'inst/doc/{html,latex,man} as we no
	  longer ship the voluminous doxygen-generated content

	* inst/doc/examples/ConvolveBenchmarks/convolve2*: Added simple
	  benchmark on the well-known vector convolution example from
	  'Writing R Extensions' to compare C and C++ implementations
	* inst/doc/examples/ConvolveBenchmarks/buildAndRun.sh: idem
	  inst/doc/examples/ConvolveBenchmarks/exampleRCode.r: idem

2010-01-12  Romain Francois <francoisromain@free.fr>

	* inst/doc/examples/ConvolveBenchmarks/convolve2*: Added additional
	C++ examples to convolution benchmark highlighting performance gains

2010-01-11  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/CharacterVector.h: StringProxy gains operator+=
	* src/CharacterVector.cpp: implementation

	* src/Rcpp/*Vector.h: operator[] now throws index out of bounds
	exception when needed (FR#770)
	* src/*Vector.cpp: same

	* src/Rcpp/Environment.h: operator[](string) for environment
	allowing to get/set values of a binding in this environment.
	The Environment::Binding class has been created to act as
	a proxy.
	* src/Environment.cpp: idem
	* inst/unitTests/runit.environments.R: unit tests for the above

2010-01-10  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: operator[] for pairlist using proxies
	* src/Pairlist.cpp : idem
	* inst/unitTests/runit.Pairlist.R: new unit tests
